# Express/Models/User.js
@@ -1,13 +1,14 @@
 let userIdCounter = 1;
 
 class User {
-    constructor(nome, email, password) {
+    constructor(nome, email, password, roles = []) {
         this.id = userIdCounter++;
         this.nome = nome;
         this.email = email;
         this.password = password;
-        this.roles = [];
+        this.roles = roles;
     }
+
 }
 
 export default User;
